plugins {
    id 'org.springframework.boot' version '2.5.0'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'groovy'
    id 'war'
}

group 'ua.nure.illiashenko'
version '1.0-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.hibernate:hibernate-core:5.6.15.Final'
    implementation 'mysql:mysql-connector-java:8.0.33'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.0.3'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.3'
    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.5.3'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.3'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    implementation 'io.springfox:springfox-boot-starter:3.0.0'
    implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
    implementation 'junit:junit:4.13.2'
    implementation group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.2.0.Final'
    implementation group: 'io.github.openfeign', name: 'feign-annotation-error-decoder', version: '11.6'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-amqp', version: '2.7.1'
    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.3'
    testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
    testImplementation 'org.codehaus.groovy:groovy-all:3.0.8'
}

ext['log4j2.version'] = '2.15.0'

test {
    useJUnitPlatform()
}